--- a/JavaCampus/src/main/resources/static/index.html
+++ b/JavaCampus/src/main/resources/static/index.html
@@ -72,6 +72,18 @@
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarSpringBoot" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Spring Boot
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarSpringBoot">
+              <a class="dropdown-item" 
+                href="https://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/" 
+                target="_blank">
+                Spring Boot Docs
+              </a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -275,6 +287,13 @@
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2021</p>
+    </div>
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        <a href="https://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/">
+          Spring Boot Reference Documentation
+        </a>
+      </p>
     </div>
     <!-- /.container -->
   </footer>
