--- a/JavaCampus/src/main/resources/static/action-categories/counter.html
+++ b/JavaCampus/src/main/resources/static/action-categories/counter.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Action Category</title>
+    <title>Counter</title>
+</head>
+<body>
+    <h1>카운터</h1>
     <script type="importmap">
         {
           "imports": {
@@ -12,10 +15,10 @@
           }
         }
       </script>
-</head>
-<body>      
+      
       <div id="app">
-          <h1>{{ title }}</h1>          
+        <h2>Count: {{ count }}</h2>
+        <button @click="count++">Click</button>
       </div>
       
       <script type="module">
@@ -24,7 +27,7 @@
         createApp({
           data() {
             return {
-              title: 'Category List'
+              count: 0
             }
           }
         }).mount('#app')
